# Discrete-Math

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  funcs.cpp  funcs.h  main.cpp  otchot.tex  test.cpp
